--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://acolyer13.github.io/pokemon-events/",
   "name": "pokemon-events",
   "private": true,
   "version": "0.0.0",
